Starting to check-in changes for preprocessing of data

--- a/Pre-processing/evaluate_datafile_quality/explore_data_stat_201617.ipynb
+++ b/Pre-processing/evaluate_datafile_quality/explore_data_stat_201617.ipynb
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b03a6df1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/dhanaprakashdurairaj/Documents/GitHub/nba-player-analytics/Practice'"
+       "'/Users/dhanaprakashdurairaj/Documents/GitHub/nba-player-analytics/Pre-processing/evaluate_datafile_quality'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,24 +56,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../Resources/NBA Players Stats 201617.csv\n",
-      "../Resources/NBA Players Stats 201718.csv\n",
-      "../Resources/NBA Players Stats 201819.csv\n",
-      "../Resources/NBA STATs19-20.csv\n",
-      "../Resources/nba_stats_salaries_16-19.csv\n",
-      "../Resources/NBA_salaries_2019_present.csv\n"
+      "../../Resources/NBA Players Stats 201617.csv\n",
+      "../../Resources/NBA Players Stats 201718.csv\n",
+      "../../Resources/NBA Players Stats 201819.csv\n",
+      "../../Resources/NBA STATs19-20.csv\n",
+      "../../Resources/nba_stats_salaries_16-19.csv\n",
+      "../../Resources/NBA_salaries_2019_present.csv\n"
      ]
     }
    ],
    "source": [
     "# File to Load (Remember to change these)\n",
-    "player_stats_201617_data_to_load = \"../Resources/NBA Players Stats 201617.csv\"\n",
-    "player_stats_201718_data_to_load = \"../Resources/NBA Players Stats 201718.csv\"\n",
-    "player_stats_201819_data_to_load = \"../Resources/NBA Players Stats 201819.csv\"\n",
-    "player_stats_201920_data_to_load = \"../Resources/NBA STATs19-20.csv\"\n",
+    "player_stats_201617_data_to_load = \"../../Resources/NBA Players Stats 201617.csv\"\n",
+    "player_stats_201718_data_to_load = \"../../Resources/NBA Players Stats 201718.csv\"\n",
+    "player_stats_201819_data_to_load = \"../../Resources/NBA Players Stats 201819.csv\"\n",
+    "player_stats_201920_data_to_load = \"../../Resources/NBA STATs19-20.csv\"\n",
     "\n",
-    "player_salary_2019_to_present_data_to_load = \"../Resources/NBA_salaries_2019_present.csv\"\n",
-    "player_salary_2016_to_2019_data_to_load = \"../Resources/nba_stats_salaries_16-19.csv\"\n",
+    "player_salary_2019_to_present_data_to_load = \"../../Resources/NBA_salaries_2019_present.csv\"\n",
+    "player_salary_2016_to_2019_data_to_load = \"../../Resources/nba_stats_salaries_16-19.csv\"\n",
     "\n",
     "print(player_stats_201617_data_to_load)\n",
     "print(player_stats_201718_data_to_load)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d29ba2a3",
    "metadata": {},
    "outputs": [
@@ -94,12 +94,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
      ]
     }
    ],
