--- a/Pre-processing/preprocessing_data/explore_data_salary_2016_19.ipynb
+++ b/Pre-processing/preprocessing_data/explore_data_salary_2016_19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "450ab203",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "806dfb47",
    "metadata": {},
    "outputs": [],
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "b03a6df1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/dhanaprakashdurairaj/Documents/GitHub/nba-player-analytics/Practice'"
+       "'/Users/dhanaprakashdurairaj/Documents/GitHub/nba-player-analytics/Pre-processing/preprocessing_data'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "beb0ca45",
    "metadata": {},
    "outputs": [
@@ -56,24 +56,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../Resources/NBA Players Stats 201617.csv\n",
-      "../Resources/NBA Players Stats 201718.csv\n",
-      "../Resources/NBA Players Stats 201819.csv\n",
-      "../Resources/NBA STATs19-20.csv\n",
-      "../Resources/nba_stats_salaries_16-19.csv\n",
-      "../Resources/NBA_salaries_2019_present.csv\n"
+      "../../Resources/NBA Players Stats 201617.csv\n",
+      "../../Resources/NBA Players Stats 201718.csv\n",
+      "../../Resources/NBA Players Stats 201819.csv\n",
+      "../../Resources/NBA STATs19-20.csv\n",
+      "../../Resources/nba_stats_salaries_16-19.csv\n",
+      "../../Resources/NBA_salaries_2019_present.csv\n"
      ]
     }
    ],
    "source": [
     "# File to Load (Remember to change these)\n",
-    "player_stats_201617_data_to_load = \"../Resources/NBA Players Stats 201617.csv\"\n",
-    "player_stats_201718_data_to_load = \"../Resources/NBA Players Stats 201718.csv\"\n",
-    "player_stats_201819_data_to_load = \"../Resources/NBA Players Stats 201819.csv\"\n",
-    "player_stats_201920_data_to_load = \"../Resources/NBA STATs19-20.csv\"\n",
+    "player_stats_201617_data_to_load = \"../../Resources/NBA Players Stats 201617.csv\"\n",
+    "player_stats_201718_data_to_load = \"../../Resources/NBA Players Stats 201718.csv\"\n",
+    "player_stats_201819_data_to_load = \"../../Resources/NBA Players Stats 201819.csv\"\n",
+    "player_stats_201920_data_to_load = \"../../Resources/NBA STATs19-20.csv\"\n",
     "\n",
-    "player_salary_2019_to_present_data_to_load = \"../Resources/NBA_salaries_2019_present.csv\"\n",
-    "player_salary_2016_to_2019_data_to_load = \"../Resources/nba_stats_salaries_16-19.csv\"\n",
+    "player_salary_2019_to_present_data_to_load = \"../../Resources/NBA_salaries_2019_present.csv\"\n",
+    "player_salary_2016_to_2019_data_to_load = \"../../Resources/nba_stats_salaries_16-19.csv\"\n",
     "\n",
     "print(player_stats_201617_data_to_load)\n",
     "print(player_stats_201718_data_to_load)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "d29ba2a3",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "9b1ee00c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "1b095101",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
        "[1408 rows x 45 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "5c5ab53f",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "ae6510e2",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "1453949b",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +1991,9 @@
    "id": "159f8957",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#THE FOLLOWING SECTION is for removing null values for fields "
+   ]
   }
  ],
  "metadata": {
