Prepocessing Player Stats for year 2017-18

--- a/Pre-processing/preprocessing_data/explore_data_stats_201617.ipynb
+++ b/Pre-processing/preprocessing_data/explore_data_stats_201617.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 161,
    "id": "9b1edf26",
    "metadata": {},
    "outputs": [
@@ -168,16 +168,16 @@
        "      <th>FG</th>\n",
        "      <th>FGA</th>\n",
        "      <th>...</th>\n",
-       "      <th>FT%</th>\n",
-       "      <th>ORB</th>\n",
-       "      <th>DRB</th>\n",
-       "      <th>TRB</th>\n",
        "      <th>AST</th>\n",
        "      <th>STL</th>\n",
        "      <th>BLK</th>\n",
        "      <th>TOV</th>\n",
        "      <th>PF</th>\n",
        "      <th>PTS</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>player_frequency</th>\n",
+       "      <th>playing_season</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -194,16 +194,16 @@
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.898</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.3</td>\n",
        "      <td>0.6</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.7</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>Álex Abrines</td>\n",
+       "      <td>abrinal01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -218,16 +218,16 @@
        "      <td>1.8</td>\n",
        "      <td>4.5</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.750</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.6</td>\n",
        "      <td>1.8</td>\n",
        "      <td>5.8</td>\n",
+       "      <td>Quincy Acy</td>\n",
+       "      <td>acyqu01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -242,16 +242,16 @@
        "      <td>0.8</td>\n",
        "      <td>2.8</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.667</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.3</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>1.5</td>\n",
        "      <td>2.2</td>\n",
+       "      <td>Quincy Acy</td>\n",
+       "      <td>acyqu01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -266,16 +266,16 @@
        "      <td>2.0</td>\n",
        "      <td>4.8</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.754</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>3.3</td>\n",
        "      <td>0.6</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.6</td>\n",
        "      <td>1.8</td>\n",
        "      <td>6.5</td>\n",
+       "      <td>Quincy Acy</td>\n",
+       "      <td>acyqu01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -290,16 +290,16 @@
        "      <td>4.7</td>\n",
        "      <td>8.2</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.611</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>7.7</td>\n",
        "      <td>1.1</td>\n",
        "      <td>1.1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.8</td>\n",
        "      <td>2.4</td>\n",
        "      <td>11.3</td>\n",
+       "      <td>Steven Adams</td>\n",
+       "      <td>adamsst01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -338,16 +338,16 @@
        "      <td>4.1</td>\n",
        "      <td>7.1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.679</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>6.5</td>\n",
        "      <td>1.6</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.9</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>10.3</td>\n",
+       "      <td>Cody Zeller</td>\n",
+       "      <td>zelleco01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>591</th>\n",
@@ -362,16 +362,16 @@
        "      <td>1.5</td>\n",
        "      <td>3.1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.564</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>2.4</td>\n",
        "      <td>0.8</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.4</td>\n",
        "      <td>1.2</td>\n",
        "      <td>3.5</td>\n",
+       "      <td>Tyler Zeller</td>\n",
+       "      <td>zellety01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>592</th>\n",
@@ -386,16 +386,16 @@
        "      <td>0.5</td>\n",
        "      <td>1.6</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1.8</td>\n",
        "      <td>0.2</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.3</td>\n",
        "      <td>0.2</td>\n",
        "      <td>0.9</td>\n",
        "      <td>1.2</td>\n",
+       "      <td>Stephen Zimmerman</td>\n",
+       "      <td>zimmest01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>593</th>\n",
@@ -410,16 +410,16 @@
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.775</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>2.8</td>\n",
        "      <td>0.8</td>\n",
        "      <td>0.3</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.9</td>\n",
        "      <td>1.8</td>\n",
        "      <td>5.5</td>\n",
+       "      <td>Paul Zipser</td>\n",
+       "      <td>zipsepa01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>594</th>\n",
@@ -434,20 +434,20 @@
        "      <td>3.3</td>\n",
        "      <td>6.3</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.653</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>4.2</td>\n",
        "      <td>0.8</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.9</td>\n",
        "      <td>0.8</td>\n",
        "      <td>1.7</td>\n",
        "      <td>7.5</td>\n",
+       "      <td>Ivica Zubac</td>\n",
+       "      <td>zubaciv01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>595 rows × 30 columns</p>\n",
+       "<p>595 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -464,23 +464,36 @@
        "593  485        Paul Zipser\\zipsepa01  SF   22  CHI  44  18  19.2  2.0  5.0   \n",
        "594  486        Ivica Zubac\\zubaciv01   C   19  LAL  38  11  16.0  3.3  6.3   \n",
        "\n",
-       "     ...    FT%  ORB  DRB  TRB  AST  STL  BLK  TOV   PF   PTS  \n",
-       "0    ...  0.898  0.3  1.0  1.3  0.6  0.5  0.1  0.5  1.7   6.0  \n",
-       "1    ...  0.750  0.5  2.5  3.0  0.5  0.4  0.4  0.6  1.8   5.8  \n",
-       "2    ...  0.667  0.3  1.0  1.3  0.0  0.0  0.0  0.3  1.5   2.2  \n",
-       "3    ...  0.754  0.6  2.8  3.3  0.6  0.4  0.5  0.6  1.8   6.5  \n",
-       "4    ...  0.611  3.5  4.2  7.7  1.1  1.1  1.0  1.8  2.4  11.3  \n",
-       "..   ...    ...  ...  ...  ...  ...  ...  ...  ...  ...   ...  \n",
-       "590  ...  0.679  2.2  4.4  6.5  1.6  1.0  0.9  1.0  3.0  10.3  \n",
-       "591  ...  0.564  0.8  1.6  2.4  0.8  0.1  0.4  0.4  1.2   3.5  \n",
-       "592  ...  0.600  0.6  1.3  1.8  0.2  0.1  0.3  0.2  0.9   1.2  \n",
-       "593  ...  0.775  0.3  2.5  2.8  0.8  0.3  0.4  0.9  1.8   5.5  \n",
-       "594  ...  0.653  1.1  3.1  4.2  0.8  0.4  0.9  0.8  1.7   7.5  \n",
+       "     ...  AST  STL  BLK  TOV   PF   PTS        player_name  player_id  \\\n",
+       "0    ...  0.6  0.5  0.1  0.5  1.7   6.0       Álex Abrines  abrinal01   \n",
+       "1    ...  0.5  0.4  0.4  0.6  1.8   5.8         Quincy Acy    acyqu01   \n",
+       "2    ...  0.0  0.0  0.0  0.3  1.5   2.2         Quincy Acy    acyqu01   \n",
+       "3    ...  0.6  0.4  0.5  0.6  1.8   6.5         Quincy Acy    acyqu01   \n",
+       "4    ...  1.1  1.1  1.0  1.8  2.4  11.3       Steven Adams  adamsst01   \n",
+       "..   ...  ...  ...  ...  ...  ...   ...                ...        ...   \n",
+       "590  ...  1.6  1.0  0.9  1.0  3.0  10.3        Cody Zeller  zelleco01   \n",
+       "591  ...  0.8  0.1  0.4  0.4  1.2   3.5       Tyler Zeller  zellety01   \n",
+       "592  ...  0.2  0.1  0.3  0.2  0.9   1.2  Stephen Zimmerman  zimmest01   \n",
+       "593  ...  0.8  0.3  0.4  0.9  1.8   5.5        Paul Zipser  zipsepa01   \n",
+       "594  ...  0.8  0.4  0.9  0.8  1.7   7.5        Ivica Zubac  zubaciv01   \n",
        "\n",
-       "[595 rows x 30 columns]"
+       "     player_frequency  playing_season  \n",
+       "0                   1            2016  \n",
+       "1                   3            2016  \n",
+       "2                   3            2016  \n",
+       "3                   3            2016  \n",
+       "4                   1            2016  \n",
+       "..                ...             ...  \n",
+       "590                 1            2016  \n",
+       "591                 1            2016  \n",
+       "592                 1            2016  \n",
+       "593                 1            2016  \n",
+       "594                 1            2016  \n",
+       "\n",
+       "[595 rows x 34 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d57e87f9",
+   "id": "76b26419",
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4ff1832a",
+   "id": "59074963",
    "metadata": {},
    "outputs": [
     {
@@ -1903,13 +1916,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f702c3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
-   "id": "43770d47",
+   "id": "69eecc42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The follwoing section to remove null values\n",
-    "#create a new Dataframe which would hold clean data\n",
+    "# The follwoing section is to remove null values and\n",
+    "# create a new Dataframe which would hold clean data\n",
     "player_stats_201617_clean_df = player_stats_201617_df"
    ]
   },
@@ -2175,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7683c925",
+   "id": "acb1d651",
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2223,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3f333065",
+   "id": "cddb9f16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2213,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1109a144",
+   "id": "dd17d801",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2261,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e3055a45",
+   "id": "624559e2",
    "metadata": {},
    "outputs": [
     {
@@ -2599,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9285a304",
+   "id": "13ca44a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2632,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3ab927fb",
+   "id": "4f8a56f9",
    "metadata": {},
    "outputs": [
     {
@@ -2633,7 +2654,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "65f967ba",
+   "id": "45632586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2644,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "dab5d4c4",
+   "id": "328629fa",
    "metadata": {},
    "outputs": [
     {
@@ -3258,7 +3279,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d77d3bac",
+   "id": "9cc5750b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3271,7 +3292,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ca74e91a",
+   "id": "52d764df",
    "metadata": {},
    "outputs": [
     {
@@ -3304,7 +3325,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "829a9fa5",
+   "id": "83bc9ae0",
    "metadata": {},
    "outputs": [
     {
@@ -3424,7 +3445,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "e17e347d",
+   "id": "2b2c1c47",
    "metadata": {},
    "outputs": [
     {
@@ -3447,7 +3468,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "73febee7",
+   "id": "9f0ca52a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3459,7 +3480,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "bbd8f36b",
+   "id": "4715a197",
    "metadata": {},
    "outputs": [
     {
@@ -3506,14 +3527,14 @@
     }
    ],
    "source": [
-    "# Verif whether new columns are added to the Dataframe\n",
+    "# Verify whether new columns are added to the Dataframe\n",
     "player_stats_201617_clean_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "57dee070",
+   "id": "6555d4ad",
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3566,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3215fdd4",
+   "id": "64d8b6e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cdcca49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3559,7 +3588,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "6c9c674d",
+   "id": "c9a26262",
    "metadata": {},
    "outputs": [
     {
@@ -3594,7 +3623,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "ed077f3b",
+   "id": "a256b79c",
    "metadata": {},
    "outputs": [
     {
@@ -3616,7 +3645,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "2cea0f3d",
+   "id": "f7087f6b",
    "metadata": {},
    "outputs": [
     {
@@ -4121,7 +4150,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "165e14bb",
+   "id": "6e3df066",
    "metadata": {},
    "outputs": [
     {
@@ -4155,7 +4184,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "001ee313",
+   "id": "8fb9d6fd",
    "metadata": {},
    "outputs": [
     {
@@ -4176,7 +4205,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "82039132",
+   "id": "f5f148aa",
    "metadata": {},
    "outputs": [
     {
@@ -4198,7 +4227,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "e06e5039",
+   "id": "61d00188",
    "metadata": {},
    "outputs": [
     {
@@ -4572,7 +4601,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "5b90db70",
+   "id": "602c32d1",
    "metadata": {},
    "outputs": [
     {
@@ -4946,7 +4975,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "df608948",
+   "id": "04e75418",
    "metadata": {},
    "outputs": [
     {
@@ -5319,7 +5348,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "bf7d07ca",
+   "id": "0fbb7278",
    "metadata": {},
    "outputs": [
     {
@@ -6827,7 +6856,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "a79f31fd",
+   "id": "8a666ccf",
    "metadata": {},
    "outputs": [
     {
@@ -7204,7 +7233,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "cc1726c0",
+   "id": "e014f872",
    "metadata": {},
    "outputs": [
     {
@@ -7581,7 +7610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2fb971a",
+   "id": "09cc4290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7594,7 +7623,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "38e2b1c8",
+   "id": "33837304",
    "metadata": {},
    "outputs": [
     {
@@ -7620,7 +7649,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "f3f86f8e",
+   "id": "5c5a469d",
    "metadata": {},
    "outputs": [
     {
@@ -7969,7 +7998,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "23ad9f97",
+   "id": "20a7fb31",
    "metadata": {},
    "outputs": [
     {
@@ -8387,7 +8416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af912b01",
+   "id": "f73e646e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8395,11 +8424,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05717755",
+   "id": "f3d5070f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "####################\n",
+    "#####################\n",
     "# Write to CSV File\n",
     "#####################"
    ]
@@ -8407,7 +8436,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "4f15ddd2",
+   "id": "a3fdf4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8418,7 +8447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70b722aa",
+   "id": "507ac485",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8426,7 +8455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9593fb6e",
+   "id": "d62c74f2",
    "metadata": {},
    "outputs": [],
    "source": [
