--- a/Pre-processing/preprocessing_data/explore_data_stats_201718.ipynb
+++ b/Pre-processing/preprocessing_data/explore_data_stats_201718.ipynb
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "71aed87a",
+   "id": "770a3a75",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "47751f93",
+   "id": "4978d373",
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ae73050",
+   "id": "db067a5c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "0bac407d",
+   "id": "b0d8665e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "a9ad67ed",
+   "id": "2834d804",
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "32bfb4ac",
+   "id": "28fc618f",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "952c555f",
+   "id": "95c8c4c5",
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "0acd9e17",
+   "id": "37008f6f",
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "d9fa029d",
+   "id": "8683a67a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "63b77464",
+   "id": "c1e90a3d",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "42f8d9b6",
+   "id": "84095df6",
    "metadata": {},
    "outputs": [
     {
@@ -1948,19 +1948,19 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "335e3075",
+   "id": "6198c68a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#########################\n",
+    "#################################################################################\n",
     "# The following section is for splitting player_id and Playname into two columns\n",
-    "#########################"
+    "#################################################################################"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "a7bef2a0",
+   "id": "b7a29957",
    "metadata": {},
    "outputs": [
     {
@@ -1982,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "3a121d5d",
+   "id": "f76fd69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "f5ebd7ed",
+   "id": "5fbdf875",
    "metadata": {},
    "outputs": [
     {
@@ -2676,7 +2676,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "c0798e7a",
+   "id": "705e45f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2689,7 +2689,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "a3f85e96",
+   "id": "e8cd5cc8",
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "129a4e94",
+   "id": "2aec1aba",
    "metadata": {},
    "outputs": [
     {
@@ -2853,7 +2853,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "0cef8b09",
+   "id": "81337267",
    "metadata": {},
    "outputs": [
     {
@@ -2876,7 +2876,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "def13843",
+   "id": "82bc139f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2888,7 +2888,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "a757ff94",
+   "id": "feae27f4",
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "72a589c0",
+   "id": "ee78ed73",
    "metadata": {},
    "outputs": [
     {
@@ -2974,7 +2974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a26f298",
+   "id": "40b4511e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2982,7 +2982,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "675bd927",
+   "id": "0f6ec4fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2996,7 +2996,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "51fb4d02",
+   "id": "97f39d0e",
    "metadata": {},
    "outputs": [
     {
@@ -3023,7 +3023,7 @@
     }
    ],
    "source": [
-    "# find Frequency of occurence of a players name\n",
+    "# Find Frequency of occurence of a players name\n",
     "duplicate_name_df = player_stats_clean_df['player_id'].groupby(player_stats_clean_df['player_id']).count()\n",
     "duplicate_name_df"
    ]
@@ -3031,7 +3031,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "0445adf2",
+   "id": "68955c4d",
    "metadata": {},
    "outputs": [
     {
@@ -3046,14 +3046,14 @@
     }
    ],
    "source": [
-    "# Filter naems if they are repeasted duplicate_name_df\n",
+    "# Filter names if they are repeated duplicate_name_df\n",
     "duplicate_name_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "54c3dc47",
+   "id": "bb523574",
    "metadata": {},
    "outputs": [
     {
@@ -3612,7 +3612,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "4f82703c",
+   "id": "3df0a3f3",
    "metadata": {},
    "outputs": [
     {
@@ -3646,7 +3646,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "e7f1f181",
+   "id": "48090c0a",
    "metadata": {},
    "outputs": [
     {
@@ -3667,7 +3667,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "45b5edbd",
+   "id": "df8600c0",
    "metadata": {},
    "outputs": [
     {
@@ -3689,7 +3689,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "a3160104",
+   "id": "052139c0",
    "metadata": {},
    "outputs": [
     {
@@ -4063,7 +4063,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "646f5a18",
+   "id": "0076f244",
    "metadata": {},
    "outputs": [
     {
@@ -4436,7 +4436,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "466139eb",
+   "id": "fc916f41",
    "metadata": {},
    "outputs": [
     {
@@ -4809,7 +4809,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "b412e1a3",
+   "id": "4e3fb0a1",
    "metadata": {},
    "outputs": [
     {
@@ -6479,7 +6479,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "8c79951f",
+   "id": "b144e3d6",
    "metadata": {},
    "outputs": [
     {
@@ -6856,7 +6856,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "3f95d042",
+   "id": "10ee015c",
    "metadata": {},
    "outputs": [
     {
@@ -7245,7 +7245,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "5ebb14e9",
+   "id": "3f9b0fbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7258,7 +7258,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "d480f712",
+   "id": "314dde53",
    "metadata": {},
    "outputs": [
     {
@@ -7284,7 +7284,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "1113d21a",
+   "id": "5127b8fb",
    "metadata": {},
    "outputs": [
     {
@@ -7633,7 +7633,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "48d51bdc",
+   "id": "14cc07cf",
    "metadata": {},
    "outputs": [
     {
@@ -8051,7 +8051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb0bd8b",
+   "id": "d433cc3c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8059,7 +8059,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "3d5658ae",
+   "id": "d7c891e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8071,7 +8071,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "b207b152",
+   "id": "f97bd9ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8082,7 +8082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9289925",
+   "id": "0dc20cba",
    "metadata": {},
    "outputs": [],
    "source": []
