Prepocessing Player Salary for year 2017-18

--- a/Pre-processing/preprocessing_data/explore_data_salary_2016_19.ipynb
+++ b/Pre-processing/preprocessing_data/explore_data_salary_2016_19.ipynb
@@ -1987,6 +1987,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d2947c27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "id": "159f8957",
    "metadata": {},
@@ -2349,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bf4f1289",
+   "id": "14274bbb",
    "metadata": {},
    "outputs": [
     {
@@ -2383,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0230cb19",
+   "id": "b2cccf44",
    "metadata": {},
    "outputs": [
     {
@@ -2405,7 +2413,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ef8cec9b",
+   "id": "eabac272",
    "metadata": {},
    "outputs": [
     {
@@ -2457,7 +2465,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "3a656042",
+   "id": "c587459f",
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "22467e9d",
+   "id": "bd807e23",
    "metadata": {},
    "outputs": [
     {
@@ -2688,7 +2696,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "9fc30e09",
+   "id": "b553006f",
    "metadata": {},
    "outputs": [
     {
@@ -2808,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e49f620d",
+   "id": "898fded2",
    "metadata": {},
    "outputs": [
     {
@@ -2964,7 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ded9bb4c",
+   "id": "36f1b42c",
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3116,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "b4359f4a",
+   "id": "dfb56f78",
    "metadata": {},
    "outputs": [
     {
@@ -3253,7 +3261,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "6a635243",
+   "id": "a75cfcec",
    "metadata": {},
    "outputs": [
     {
@@ -3385,7 +3393,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "3bebeb1b",
+   "id": "4213ea66",
    "metadata": {},
    "outputs": [
     {
@@ -3520,7 +3528,211 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f06b61ee",
+   "id": "9d6a8431",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "93cccfda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhanaprakashdurairaj/opt/anaconda3/envs/mlenv/lib/python3.7/site-packages/ipykernel_launcher.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/Users/dhanaprakashdurairaj/opt/anaconda3/envs/mlenv/lib/python3.7/site-packages/pandas/core/frame.py:3191: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[k1] = value[k2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>playing_season</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>brookaa01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2116955.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>gordoaa01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>5504419.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>naderab01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1167333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439</th>\n",
+       "      <td>paynead01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>77250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440</th>\n",
+       "      <td>aminual01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>7319035.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>929</th>\n",
+       "      <td>colliza01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>3057240.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>930</th>\n",
+       "      <td>lavinza01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>3202217.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>931</th>\n",
+       "      <td>randoza01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>12307692.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>932</th>\n",
+       "      <td>pachuza01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>3477600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>933</th>\n",
+       "      <td>qizh01</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>815615.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>498 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     player_id playing_season      salary\n",
+       "436  brookaa01           2017   2116955.0\n",
+       "437  gordoaa01           2017   5504419.0\n",
+       "438  naderab01           2017   1167333.0\n",
+       "439  paynead01           2017     77250.0\n",
+       "440  aminual01           2017   7319035.0\n",
+       "..         ...            ...         ...\n",
+       "929  colliza01           2017   3057240.0\n",
+       "930  lavinza01           2017   3202217.0\n",
+       "931  randoza01           2017  12307692.0\n",
+       "932  pachuza01           2017   3477600.0\n",
+       "933     qizh01           2017    815615.0\n",
+       "\n",
+       "[498 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#THE FOLLOWING SECTION is creating a Dataframe for 2017-18\n",
+    "player_salary_2017_18_df = player_salary_2016_to_2019_df.loc[(player_salary_2016_to_2019_df['Season'] == \"2017-18\")]\n",
+    "player_salary_2017_18_df\n",
+    "\n",
+    "# Way to find frequency of player_ID\n",
+    "duplicate_name_2_df = player_salary_2017_18_df['Player_ID'].value_counts()\n",
+    "duplicate_name_2_df\n",
+    "\n",
+    "# Number of players who are traded (and have multiple rows)\n",
+    "duplicate_name_2_df.loc[(duplicate_name_2_df > 1)].count()\n",
+    "\n",
+    "# Duplicate count is 0. To confirm whether a player was in two teams\n",
+    "player_salary_2017_18_df['Tm'].value_counts()\n",
+    "\n",
+    "player_salary_2017_18_df.loc[(player_salary_2017_18_df['Player_ID'] == \"acyqu01\")]\n",
+    "\n",
+    "# Creating New Data Frame for 2017-18 with just the columns we need \n",
+    "player_salary_201718_clean_df = player_salary_2017_18_df[['Player_ID','Season','Salary']]\n",
+    "player_salary_201718_clean_df\n",
+    "\n",
+    "# Change format of Season from 2017-18 to 2016\n",
+    "split_season_df = player_salary_201718_clean_df['Season'].str.split(\"-\", n = 1, expand = True)\n",
+    "split_season_df\n",
+    "\n",
+    "# Add New Column for playing_season\n",
+    "player_salary_201718_clean_df[\"playing_season\"] = split_season_df[0]\n",
+    "player_salary_201718_clean_df\n",
+    "\n",
+    "# Fill Salary Values with 0 if its null\n",
+    "player_salary_201718_clean_df[['Salary']] = player_salary_201718_clean_df[['Salary']].fillna(value=0)\n",
+    "player_salary_201718_clean_df\n",
+    "\n",
+    "# Change Column Names \n",
+    "player_salary_201718_clean_df = player_salary_201718_clean_df.rename(columns={\"Player_ID\":\"player_id\"})\n",
+    "player_salary_201718_clean_df = player_salary_201718_clean_df.rename(columns={\"Salary\":\"salary\"})\n",
+    "player_salary_201718_clean_df\n",
+    "\n",
+    "\n",
+    "# Create a Cleaned Data Frame that will be ouputted to a CSV file\n",
+    "player_salary_201718_cleaned_df = player_salary_201718_clean_df[['player_id','playing_season','salary']]\n",
+    "player_salary_201718_cleaned_df\n",
+    "\n",
+    "#########################\n",
+    "# Write to CSV File 2016\n",
+    "#########################\n",
+    "# writing Clean data to csv file\n",
+    "player_salary_201718_cleaned_df.to_csv(r'../../Resources/PreprocessedDataFiles/NBA Players Salary 201718_clean.csv', encoding='utf-8', header='true')\n",
+    "player_salary_201718_cleaned_df\n",
+    "\n",
+    "#count 498 matches with previous calculations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06699250",
    "metadata": {},
    "outputs": [],
    "source": []
